// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`classy-ui should allow pseudo decorators as base: should allow pseudo decorators as base 1`] = `

import { classnames, hover } from 'classy-ui'

hover('background-color-red-500')

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { classnames, hover } from 'classy-ui';
('hover:background-color-red-500');

_addClasses(['hover:background-color-red-500', '.hover\\\\:background-color-red-500:hover{background-color:#f56565;}\\n']);


`;

exports[`classy-ui should convert both breakpoints and pseudos: should convert both breakpoints and pseudos 1`] = `

import { classnames, hover, md } from 'classy-ui'

classnames(md(hover('background-color-red-500')))

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { classnames, hover, md } from 'classy-ui';
('hover:md:background-color-red-500');

_addClasses([
  'hover:md:background-color-red-500',
  '@media(max-width:768px){.hover\\\\:md\\\\:background-color-red-500:hover{background-color:#f56565;}}\\n\\n',
]);


`;

exports[`classy-ui should convert breakpoints: should convert breakpoints 1`] = `

import { classnames, md } from 'classy-ui'

classnames(md('background-color-red-500'))

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { classnames, md } from 'classy-ui';
('md:background-color-red-500');

_addClasses([
  'md:background-color-red-500',
  '@media(max-width:768px){.md\\\\:background-color-red-500{background-color:#f56565;}}\\n\\n',
]);


`;

exports[`classy-ui should convert complex compositions: should convert complex compositions 1`] = `

import { classnames, hover, md, lg } from 'classy-ui'

classnames('background-color-red-600', md(lg(hover('background-color-red-500'))))

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { classnames, hover, md, lg } from 'classy-ui';
('background-color-red-600 hover:lg:md:background-color-red-500');

_addClasses([
  'background-color-red-600',
  '.background-color-red-600{background-color:#e53e3e;}\\n',
  'hover:lg:md:background-color-red-500',
  '@media(max-width:1024px){.hover\\\\:lg\\\\:md\\\\:background-color-red-500:hover{background-color:#f56565;}}\\n@media(max-width:768px){.hover\\\\:lg\\\\:md\\\\:background-color-red-500:hover{background-color:#f56565;}}\\n\\n',
]);


`;

exports[`classy-ui should convert pseudos: should convert pseudos 1`] = `

import { classnames, hover } from 'classy-ui'

classnames(hover('background-color-red-500'))

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { classnames, hover } from 'classy-ui';
('hover:background-color-red-500');

_addClasses(['hover:background-color-red-500', '.hover\\\\:background-color-red-500:hover{background-color:#f56565;}\\n']);


`;

exports[`classy-ui should convert simple: should convert simple 1`] = `

import { classnames } from 'classy-ui'

classnames('background-color-red-500')

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { classnames } from 'classy-ui';
('background-color-red-500');

_addClasses(['background-color-red-500', '.background-color-red-500{background-color:#f56565;}\\n']);


`;

exports[`classy-ui should give group a classname: should give group a classname 1`] = `

import { classnames, group } from 'classy-ui'

group()

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { classnames, group } from 'classy-ui';
('group ');

_addClasses([]);


`;

exports[`classy-ui should not throw when using group inside classnames call: should not throw when using group inside classnames call 1`] = `

import { classnames, group } from 'classy-ui'

classnames(group())

      ↓ ↓ ↓ ↓ ↓ ↓

import { addClasses as _addClasses } from 'classy-ui/runtime';
import { classnames, group } from 'classy-ui';
('group ');

_addClasses([]);


`;

exports[`classy-ui should throw if group was renamed: should throw if group was renamed 1`] = `

import { classnames, group as g } from 'classy-ui'

classnames(group())

      ↓ ↓ ↓ ↓ ↓ ↓

SyntaxError: unknown: Composing variabels is only allowed with classnames()
[0m [90m 1 | [39m[36mimport[39m { classnames[33m,[39m group as g } from [32m'classy-ui'[39m[0m
[0m [90m 2 | [39m[0m
[0m[31m[1m>[22m[39m[90m 3 | [39mclassnames(group())[0m
[0m [90m   | [39m           [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[0m

`;

exports[`classy-ui should throw when nesting classnames call: should throw when nesting classnames call 1`] = `

import { classnames } from 'classy-ui'

classnames(classnames('background-color-red-600'))

      ↓ ↓ ↓ ↓ ↓ ↓

SyntaxError: unknown: Duplicating classnames is not allowed.
[0m [90m 1 | [39m[36mimport[39m { classnames } from [32m'classy-ui'[39m[0m
[0m [90m 2 | [39m[0m
[0m[31m[1m>[22m[39m[90m 3 | [39mclassnames(classnames([32m'background-color-red-600'[39m))[0m
[0m [90m   | [39m           [31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[31m[1m^[22m[39m[0m

`;
